--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <nav class="navbar is-fixed-top is-dark">
     <div class="container">
       <div class="navbar-brand">
-        <a class="navbar-item" href="https://discord.cl/">
+        <a class="navbar-item" href="http://eussora.cl/">
           Eussora.cl
         </a>
         <span class="navbar-burger burger" data-target="navbarMenuHeroA">
