--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>E U S S O R A</title>
+    <link rel="shortcut icon" type="image/png" href="/favicon.png"/>
   </head>
   <body>
       
