Renamed 'discord' section

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <ul>
         <li><a href="#eu">INICIO</a>&nbsp;</li>
         <li><a href="#about">SITIO</a></li>
-        <li> <a href="#contact">DISCORD.CL</a></li>
+        <li> <a href="#discord">DISCORD.CL</a></li>
       </ul>
     </nav>
   </header>
@@ -86,7 +86,7 @@
     </article>
   </footer>
   <!-- Footer Section -->
-  <section class="footer_banner" id="contact">
+  <section class="footer_banner" id="discord">
     <h2 class="hidden">Footer Banner Section </h2>
     <p class="eu_header">PARA CONOCER MÁS ACERCA DE DISCORD.CL</p>
     <div class="button"><a href="https://discord.cl/">DISCORD.CL</a></div>
