--- a/index.html
+++ b/index.html
@@ -75,12 +75,12 @@
   <!-- More Info Section -->
   <footer>
     <article class="footer_column">
-      <h3>DISCORD.CL</h3>
+      <h3><a href="https://discord.cl/>DISCORD.CL</a></h3>
       <img src="images/discordcl.png" alt="" width="400" height="200" class="cards"/>
       <p>Discord.cl es el servidor chileno de Discord, el cual nace a partir del subreddit del mismo Reddit, <a href="https://reddit.com/r/chile/">/r/chile</a>. Con más de mil miembros, la comunidad chilena de Discord crece día a día para lograr un un espacio de confianza, entretenido, ameno y con gente tanto para conversar como para jugar. El espacio perfecto para conocer a nuevas personas.</p>
     </article>
     <article class="footer_column">
-      <h3>DISCORD.COM</h3>
+      <h3><a href="https://discordapp.com/>DISCORD.COM</a></h3>
       <img src="images/discord.png" alt="" width="400" height="200" class="cards"/>
       <p>Discord es una aplicación de VoIP gratuita patentada y diseñada para comunidades de videojuegos, la cual se ha ido extendiendo a diversos grupos y gustos. Desde el 2015, ha sido un gran reemplazo para aplicaciones tan conocidas como TeamSpeak y Skype, entregando mejor servicio y comodidades, la cual ya cuenta con más de 87 millones de usuarios.</p>
     </article>
