--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="{{ "css/style.css" | relative_url }}">
-  <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ "/feed.xml" | relative_url }}">
+  <link rel="stylesheet" href="css/style.css">
   <title>ＥＵＳＳＯＲＡ</title>
   <!-- Favicon head tag -->
-  <link rel="icon" href="favicon.png" type="image/x-icon" />
+  <link rel="shortcut icon" type="image/png" href="favicon.png">
 </head>
 <body>
 </body>
